--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <a href="#">Download Excursion (Coming soon!)</a>
+    <video src="./resources/videos/excursion.mp4" controls>Video Failed to Load</video>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <img src="./resources/images/camp.jpg" alt="An orange tent by night"/>
+    <img src="./resources/images/phone.png" alt="Mobile/Cellar Phone Icon"/>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <a href="#">Download Excursion (Coming soon!)</a>
+    <p>© Excursion</p>
 
   </body>
 </html>
