Video autoplay and loop and css background color

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <title>Excursion</title>
-    <link href="./resources/css/style.css" type="text.css" rel="stylesheet">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <a href="#">Download Excursion (Coming soon!)</a>
-    <video src="./resources/videos/excursion.mp4" controls>Video Failed to Load</video>
+    <br>
+    <video src="./resources/videos/excursion.mp4" autoplay loop muted>Video Failed to Load</video>
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
     <img src="./resources/images/camp.jpg" alt="An orange tent by night"/>
