--- a/index.html
+++ b/index.html
@@ -6,16 +6,34 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
+
+    <!-- Video Section -->
+
+    <div id="Video">
     <a href="#">Download Excursion (Coming soon!)</a>
     <br>
     <video src="./resources/videos/excursion.mp4" autoplay loop muted>Video Failed to Load</video>
+    </div>
+
+    <!-- Picture Section -->
+
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
     <img src="./resources/images/camp.jpg" alt="An orange tent by night"/>
+
+    <!-- Coming Soon Section -->
+
+    <div id="iphone">
     <img src="./resources/images/phone.png" alt="Mobile/Cellar Phone Icon"/>
     <h2>Coming Soon for iPhone and Android</h2>
     <a href="#">Download Excursion (Coming soon!)</a>
+    </div>
+
+    <!-- Footer Section -->
+
+    <div id="footer">
     <p>© Excursion</p>
+    </div>
 
   </body>
 </html>
