wrap images in paragrpahs

--- a/index.html
+++ b/index.html
@@ -9,22 +9,23 @@
 
     <!-- Video Section -->
 
-    <div id="Video">
+    <div id="video">
     <a href="#">Download Excursion (Coming soon!)</a>
-    <br>
-    <video src="./resources/videos/excursion.mp4" autoplay loop muted>Video Failed to Load</video>
+    <p><video src="./resources/videos/excursion.mp4" autoplay loop muted>Video Failed to Load</video></p>
     </div>
 
     <!-- Picture Section -->
 
+    <div id="picture">
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-    <img src="./resources/images/camp.jpg" alt="An orange tent by night"/>
+    <p><img src="./resources/images/camp.jpg" alt="An orange tent by night"/></p>
+    </div>
 
-    <!-- Coming Soon Section -->
+    <!-- Icon Section -->
 
-    <div id="iphone">
-    <img src="./resources/images/phone.png" alt="Mobile/Cellar Phone Icon"/>
+    <div id="icon">
+    <p><img src="./resources/images/phone.png" alt="Mobile/Cellar Phone Icon"/></p>
     <h2>Coming Soon for iPhone and Android</h2>
     <a href="#">Download Excursion (Coming soon!)</a>
     </div>
