--- a/index.html
+++ b/index.html
@@ -9,26 +9,20 @@
 
     <!-- Video Section -->
 
-    <div id="video">
-    <a href="#">Download Excursion (Coming soon!)</a>
-    <p><video src="./resources/videos/excursion.mp4" autoplay loop muted>Video Failed to Load</video></p>
-    </div>
+    <p><a href="#">Download Excursion (Coming soon!)</a></p>
+    <video src="./resources/videos/excursion.mp4" autoplay loop muted>Video Failed to Load</video>
 
     <!-- Picture Section -->
 
-    <div id="picture">
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
     <p><img src="./resources/images/camp.jpg" alt="An orange tent by night"/></p>
-    </div>
 
     <!-- Icon Section -->
 
-    <div id="icon">
     <p><img src="./resources/images/phone.png" alt="Mobile/Cellar Phone Icon"/></p>
     <h2>Coming Soon for iPhone and Android</h2>
     <a href="#">Download Excursion (Coming soon!)</a>
-    </div>
 
     <!-- Footer Section -->
 
